# lush-shell

./: Cargo.toml  README.md
src/: builtins.rs  dispatcher.rs  main.rs  prompt.rs  shell.rs
src/hooks/: command_not_found_hook.rs  mod.rs
